# lowgl-examples

./: .gitignore  LICENSE.txt  README.md  lowgl-examples.cabal
data/: blending.frag  blending.vert  framebuffer1.frag  shader2.frag  shader3.frag  texture.frag  triangle.vert
executable/: Blending.hs  FrameBuffer.hs  Shader.hs  Texture.hs  Triangle.hs
